<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnlineShopV7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">name</string>
    <string name="email">eMail</string>
    <string name="postalCode">Postal Code</string>
    <string name="telephone">Telephone</string>
    <string name="submit">submit</string>
    <string name="reset">reset</string>
    <string name="digitalClock">Digital Clock</string>
    <string name="hfu">HFU</string>
    <string name="welcome">Welcome</string>

</resources>
